# python-gbk2utf

./: pyproject.toml
src/gbk2utf/: __main__.py  gbk2utf.py
